--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Passionate and hard-working Software Engineer with an experience of 3+ years in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within the team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
+					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Passionate and hard-working Software Engineer with an experience of 4+ years in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within the team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
@@ -77,22 +77,21 @@
 										    <h5>Roles Description</h5>
 											<li>NodeJS Developer (May 2022 - Aug 2023)</li>
 										    <ul>
-										    	<li>Implemented backend functionalities using Node.js, NestJS, GraphQL, etc.</li>
+										    	<li>Implemented backend functionalities using Node.js, NestJS, GraphQL, AWS, etc.</li>
 										    	<li>Was responsible for Code Reviews and SonarQube Code Quality maintenance.</li>
-												<li>Integrated multiple services of azure such as App
-													Configuration, Key Vault, Service Bus, etc. using azure SDKs for Node.js.</li>
+												<li>Integrated multiple services of Azure such as App
+													Configuration, Key Vault, Service Bus, etc. using Azure SDKs for Node.js.</li>
 										    </ul>
 											<li>Java Developer (Aug 2023 - Present)</li>
 										    <ul>
 										    	<li>Working on setting up Common Integration Environment.</li>
 										    	<li>Working on Azure Serverless features such as Azure Function Apps, Logic Apps, Event Grid Topics, etc.</li>
+												<li>Developing Spring Boot Applications using Azure Functions.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Node.js</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">NestJS</span></li>
-												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
-												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Spring Boot</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GraphQL</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">TypeScript</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
@@ -102,6 +101,8 @@
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Confluence</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Git</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Redis</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Spring Boot</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 								    </article>
@@ -224,7 +225,7 @@
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Azure</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Azure</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">.Net</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Power BI</span></li>
 											     <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Visual Studio</span></li>
@@ -337,9 +338,9 @@
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Azure</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Azure</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Power BI</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Azure IoT Hub</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Azure IoT Hub</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">.Net</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
@@ -402,13 +403,13 @@
 								        <li class="mb-2">
 								            <div class="resume-skill-name">JavaScript</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 										<li class="mb-2">
 								            <div class="resume-skill-name">TypeScript</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 
@@ -446,13 +447,19 @@
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Node.js</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 										<li class="mb-2">
 								            <div class="resume-skill-name">NestJS</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+										<li class="mb-2">
+								            <div class="resume-skill-name">Spring Boot</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 							        </ul>
@@ -471,6 +478,12 @@
 								            <div class="resume-skill-name">MySQL</div>
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+										<li class="mb-2">
+								            <div class="resume-skill-name">NoSQL</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 							        </ul>
@@ -500,11 +513,9 @@
 						            <ul class="list-inline">
 						            	<li class="list-inline-item"><span class="badge badge-light">Data Structures & Algorithms</span></li>
 						            	<li class="list-inline-item"><span class="badge badge-light">GraphQL</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">J2EE</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">Spring</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Spring Boot</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">Hibernate</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">REST APIs</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">REST APIs</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">SOAP APIs</span></li>
+							            <li class="list-inline-item"><span class="badge badge-light">J2EE</span></li>							            <li class="list-inline-item"><span class="badge badge-light">Hibernate</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Swagger</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Docker</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Redis</span></li>
@@ -600,7 +611,6 @@
 								    <li class="mb-1">Cricket</li>
 									<li class="mb-1">Watching Sports</li>
 								    <li class="mb-1">Cooking</li>
-								    <li class="mb-1">Reading Motivational Quotes</li>
 							    </ul>
 						    </div>
 					    </section> <!--//interests-section-->  
