Work Experience updates

--- a/index.html
+++ b/index.html
@@ -75,18 +75,20 @@
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 										    <h5>Roles Description</h5>
+											<li>Java Developer (Aug 2023 - Present)</li>
+										    <ul>
+										    	<li>Working on setting up Common Integration Environment.</li>
+										    	<li>Working on Azure Serverless features such as Function Apps, Logic Apps, Event Grid Topics, etc.</li>
+												<li>Developing Spring Boot Applications using Azure Functions.</li>
+										    </ul>
 											<li>NodeJS Developer (May 2022 - Aug 2023)</li>
 										    <ul>
 										    	<li>Implemented backend functionalities using Node.js, NestJS, GraphQL, AWS, etc.</li>
 										    	<li>Was responsible for Code Reviews and SonarQube Code Quality maintenance.</li>
+												<li> Migrated the entire backend application from Node.js v14 to Node.js v18
+													and from NestJS v7 to v9.</li>
 												<li>Integrated multiple services of Azure such as App
 													Configuration, Key Vault, Service Bus, etc. using Azure SDKs for Node.js.</li>
-										    </ul>
-											<li>Java Developer (Aug 2023 - Present)</li>
-										    <ul>
-										    	<li>Working on setting up Common Integration Environment.</li>
-										    	<li>Working on Azure Serverless features such as Azure Function Apps, Logic Apps, Event Grid Topics, etc.</li>
-												<li>Developing Spring Boot Applications using Azure Functions.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
