--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
 										        <h3 class="resume-position-title font-weight-bold mb-1">Associate Technology L2</h3>
-										        <div class="resume-company-name ml-auto">Publicis Sapient, Bengaluru, India</div>
+										        <div class="resume-company-name ml-auto">Publicis Sapient, Gurgaon, India</div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">May 2022 - Present</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 										    <h5>Roles Description</h5>
-											<li>Java Developer (Aug 2023 - Present)</li>
+											<li>Java Microservices Developer (Aug 2023 - Present)</li>
 										    <ul>
 										    	<li>Working on setting up Common Integration Environment.</li>
 										    	<li>Working on Azure Serverless features such as Function Apps, Logic Apps, Event Grid Topics, etc.</li>
@@ -155,7 +155,6 @@
 										    	<li>Corrected and stabilized various monitoring and reporting data points across the dashboard, live monitoring, and reports in Ameyo by identifying the product as well as
 										    	technical gaps.</li>
 										    	<li>Contributed in delivering Number Masking in GA 4.11.</li>
-										    	<li>Developed Apps using ReactJS from scratch for Video KYC Project.</li>
 										    	<li>Contributed in delivering Groups & Groups Hierarchy in GA 4.8.</li>
 											    <li>Provided L4 support for a leading banking project and resolved critical issues with proper RCA.</li>
 											    <li>Delivered many product requests in Accelerated RoadMap Development mode creating value to the company's existing product.</li>
@@ -399,7 +398,7 @@
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Java</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
@@ -415,31 +414,6 @@
 											</div>
 								        </li>
 
-							        </ul>
-						        </div><!--//resume-skill-item-->
-
-								<div class="resume-skill-item">
-							        <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
-							        <ul class="list-unstyled mb-4">
-							        	<li class="mb-2">
-								            <div class="resume-skill-name">GWT</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">HTML/CSS</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">Bootstrap</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-								        </li>
-								            
 							        </ul>
 						        </div><!--//resume-skill-item-->
 						        
@@ -461,7 +435,7 @@
 										<li class="mb-2">
 								            <div class="resume-skill-name">Spring Boot</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 							        </ul>
@@ -610,9 +584,9 @@
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Interests</h2>
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled">
-								    <li class="mb-1">Cricket</li>
 									<li class="mb-1">Watching Sports</li>
 								    <li class="mb-1">Cooking</li>
+									<li class="mb-1">Travelling</li>
 							    </ul>
 						    </div>
 					    </section> <!--//interests-section-->  
