--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Nandishwar Garg</h1>
 						    <div class="title mb-3">Software Engineer</div>
 						    <ul class="list-unstyled">
-							    <li class="mb-2"><a href="mailto: nandishwar786garg@gmail.com" target="_blank"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>nandishwar786garg@gmail.com</a><li>
+							    <li class="mb-2"><a href="mailto: nandishwar.garg@gmail.com" target="_blank"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>nandishwar.garg@gmail.com</a><li>
 							    <li><a href="tel:+917838165332" target="_blank"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>+91-7838165332</a></li>
 						    </ul>
 					    </div><!--//primary-info-->
@@ -74,21 +74,37 @@
 										    <div class="resume-position-time">May 2022 - Present</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <h5>Roles Description</h5>
-											<li>Java Microservices Developer (Aug 2023 - Present)</li>
+											<li><b>Role: Java Microservices Developer (Aug 2023 - Present)</b></li>
 										    <ul>
-										    	<li>Working on setting up Common Integration Environment.</li>
-										    	<li>Working on Azure Serverless features such as Function Apps, Logic Apps, Event Grid Topics, etc.</li>
-												<li>Developing Spring Boot Applications using Azure Functions.</li>
+										    	<li>Created multiple SDKs used by 30+ developers for developing backend features of hotel management systems of 5+ leading hotel chains.</li>
+										    	<li>Working on Azure serverless features such as Function Apps, Logic Apps, Event Grid Topics, etc.</li>
+												<li>Developing Spring Boot based containerized reusable components such as Generic SaaS Services, Generic Adaptors, etc.</li>
+												<li>Implemented zero-trust policy for inter-service integration in our project.</li>
 										    </ul>
-											<li>NodeJS Developer (May 2022 - Aug 2023)</li>
+											<br>
+											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
+										    <ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Spring Boot</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microservices</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Azure</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">JUnit</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">REST APIs</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Maven</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">GitHub</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Confluence</span></li>
+										    </ul>
+											<br>
+											<li><b>Role: Tech Lead - NodeJS (May 2022 - Aug 2023)</b></li>
 										    <ul>
-										    	<li>Implemented backend functionalities using Node.js, NestJS, GraphQL, AWS, etc.</li>
-										    	<li>Was responsible for Code Reviews and SonarQube Code Quality maintenance.</li>
-												<li> Migrated the entire backend application from Node.js v14 to Node.js v18
-													and from NestJS v7 to v9.</li>
-												<li>Integrated multiple services of Azure such as App
-													Configuration, Key Vault, Service Bus, etc. using Azure SDKs for Node.js.</li>
+										    	<li>Acted as a Tech Lead for all Node.js and NestJS related development along with strategizing the roadmap, delegating work, releasing deliverables, etc.</li>
+										    	<li>Implemented backend and DevOps functionalities using Node.js, NestJS, GraphQL, AWS, Terraform, CI/CD.</li>
+												<li>Was responsible for Code Reviews, Code Quality maintenance and monthly production deployment.</li>
+												<li>Delivered monthly Knowledge Transfer sessions to the client's team.</li>
+												<li>Migrated the entire backend application from Node.js v14 to Node.js v18 and from NestJS v7 to v9.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
@@ -96,15 +112,16 @@
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">NestJS</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GraphQL</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">TypeScript</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">REST APIs</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">SOAP APIs</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">AWS</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Jest</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">AWS</span></li>
-												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Azure</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Confluence</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Git</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Redis</span></li>
-												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
-												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Spring Boot</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Terraform</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">GitHub</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Confluence</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 								    </article>
@@ -113,16 +130,18 @@
    
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
-										        <h3 class="resume-position-title font-weight-bold mb-1">Associate Technology L1(NodeJS Developer)</h3>
+										        <h3 class="resume-position-title font-weight-bold mb-1">Associate Technology L1</h3>
 										        <div class="resume-company-name ml-auto">Publicis Sapient, Bengaluru, India</div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">Feb 2021 - Apr 2022</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <h5>Role Description</h5>
+										    <b>Role: NodeJS Backend Developer</b>
 										    <ul>
 										    	<li>Developed several microservices using Node.js, NestJS, GraphQL, etc.</li>
 										    	<li>Integrated third-party SOAP APIs with Node.js application.</li>
+												<li>Was responsible for preparation and analysis of the monthly AWS X-Ray
+													report of all the APIs.</li>
 												<li>Implemented Configuration Management Framework using AWS AppConfig.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
@@ -133,9 +152,10 @@
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">TypeScript</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">AWS</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Jest</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">GitLab</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Confluence</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Gitlab</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 								    </article>
@@ -144,18 +164,16 @@
    
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
-										        <h3 class="resume-position-title font-weight-bold mb-1">Software Engineer-I</h3>
+										        <h3 class="resume-position-title font-weight-bold mb-1">Software Engineer I</h3>
 										        <div class="resume-company-name ml-auto">Ameyo, Gurgaon, India</div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">Jul 2019 - Jan 2021</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <h5>Role Description</h5>
+										    <b>Role: Java Developer</b>
 										    <ul>
-										    	<li>Corrected and stabilized various monitoring and reporting data points across the dashboard, live monitoring, and reports in Ameyo by identifying the product as well as
-										    	technical gaps.</li>
-										    	<li>Contributed in delivering Number Masking in GA 4.11.</li>
-										    	<li>Contributed in delivering Groups & Groups Hierarchy in GA 4.8.</li>
+										    	<li>Corrected and stabilized 20+ algorithms used for various data points across the dashboard and reports by identifying the product and technical gaps.</li>
+										    	<li>Implemented Number Masking and Groups Hierarchy features.</li>
 											    <li>Provided L4 support for a leading banking project and resolved critical issues with proper RCA.</li>
 											    <li>Delivered many product requests in Accelerated RoadMap Development mode creating value to the company's existing product.</li>
 											    <li>Developed in various complex modules from scratch with good quality while adhering to the time-lines.</li>
@@ -165,8 +183,8 @@
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">REST</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Hibernate</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">React.js</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Linux</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Git</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Agile</span></li>
@@ -176,63 +194,6 @@
 									    </div><!--//resume-timeline-item-desc-->
 								    </article>
 
-								    <article class="resume-timeline-item position-relative pb-5">
-   
-									    <div class="resume-timeline-item-header mb-2">
-										    <div class="d-flex flex-column flex-md-row">
-										        <h3 class="resume-position-title font-weight-bold mb-1">Intern-Product</h3>
-										        <div class="resume-company-name ml-auto">Ameyo, Gurgaon, India</div>
-										    </div><!--//row-->
-										    <div class="resume-position-time">Jan 2019 - Jul 2019</div>
-									    </div><!--//resume-timeline-item-header-->
-									    <div class="resume-timeline-item-desc">
-										    <h5>Role Description</h5>
-										    <ul>
-										    	<li>Worked on GWT architecture and developed various features in the existing product.</li>
-										    	<li>Developed Voice-Call related features.</li>
-										    	<li>Ensured proper and stable delivery of releases by fixing issues during the release cycle.</li>
-										    </ul>
-										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
-										    <ul class="list-inline">
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">REST</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Linux</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Git</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Agile</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
-										    </ul>
-									    </div><!--//resume-timeline-item-desc-->
-
-								    </article><!--//resume-timeline-item-->
-								    
-								    <article class="resume-timeline-item position-relative pb-5">
-									    
-									    <div class="resume-timeline-item-header mb-2">
-										    <div class="d-flex flex-column flex-md-row">
-										        <h3 class="resume-position-title font-weight-bold mb-1">Cloud Developer Intern</h3>
-										        <div class="resume-company-name ml-auto">Hanu Software Solutions, Greater Noida, India</div>
-										    </div><!--//row-->
-										    <div class="resume-position-time">Jun 2018 - Jul 2018</div>
-									    </div><!--//resume-timeline-item-header-->
-									    <div class="resume-timeline-item-desc">
-									    	<h5>Role Description</h5>
-										    <ul>
-										    	<li>Created virtual machines using ARM Template, Powershell script, etc</li>
-											    <li>Worked on Azure IoT Hub</li>
-											    <li>Did project on device to cloud messaging using Azure IoT Hub</li>
-										    </ul>
-										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
-										    <ul class="list-inline">
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Azure</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">.Net</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Power BI</span></li>
-											     <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Visual Studio</span></li>
-										    </ul>
-									    </div><!--//resume-timeline-item-desc-->
-								    </article><!--//resume-timeline-item-->  
 							    </div><!--//resume-timeline-->   
 						    </div>
 					    </section><!--//experience-section-->
@@ -491,10 +452,14 @@
 						            	<li class="list-inline-item"><span class="badge badge-light">GraphQL</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">REST APIs</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">SOAP APIs</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">J2EE</span></li>							            <li class="list-inline-item"><span class="badge badge-light">Hibernate</span></li>
+							            <li class="list-inline-item"><span class="badge badge-light">J2EE</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Hibernate</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Maven</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Swagger</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Docker</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Redis</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">SonarQube</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Agile Methodologies</span></li>
 						            </ul>
 						        </div><!--//resume-skill-item-->
 						    </div><!--resume-section-content-->
