Certifications section updated

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Passionate and hard-working Software Engineer with an experience of 4+ years in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within the team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
+					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Passionate and hard-working Software Engineer with an experience of 5+ years in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within the team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
@@ -237,7 +237,7 @@
 								    <article class="resume-timeline-item position-relative pb-5">
 									    
 									    <div class="resume-timeline-item-header mb-2">
-										    <h4>AWS Certified Cloud Practitioner</h4>
+										    <h5>AWS Certified Cloud Practitioner (CLF-C01)</h5>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 										    <ul>
@@ -245,6 +245,21 @@
 											    <li>Credentials: <a href = "https://www.credly.com/badges/c4a7c948-07ce-41f3-a4aa-89dcc08b1418" target="_blank">AWS Certified Cloud Practitioner issued by AWS Training and Certification</a></li>
 											    <li>Issued on: Apr 29, 2023</li>
 											    <li>Expires on: Apr 29, 2026</li>
+										    </ul>
+									    </div><!--//resume-timeline-item-desc-->
+								    </article><!--//resume-timeline-item-->
+
+									<article class="resume-timeline-item position-relative pb-5">
+									    
+									    <div class="resume-timeline-item-header mb-2">
+										    <h5>Microsoft Certified: Azure Fundamentals (AZ-900)</h5>
+									    </div><!--//resume-timeline-item-header-->
+									    <div class="resume-timeline-item-desc">
+										    <ul>
+										    	<li>Issuer: <a href = "https://www.microsoft.com/en-in/" target="_blank">Microsoft</a></li>
+											    <li>Credentials: <a href = "https://learn.microsoft.com/en-us/users/nandishwargarg-5723/credentials/e78909a76a2465d2" target="_blank">Microsoft Certified Azure Fundamentals issued by Microsoft</a></li>
+											    <li>Issued on: June 29, 2024</li>
+											    <li>Expires on: Never Expires</li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 								    </article><!--//resume-timeline-item-->
